[project]
name = "imprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "ollama>=0.5.3",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "tqdm>=4.67.1",
]
