[project]
name = "imprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "compressed-tensors>=0.11.0",
    "easyocr>=1.7.2",
    "imutils>=0.5.4",
    "layoutparser[effdet]>=0.3.4",
    "loguru>=0.7.3",
    "marker-pdf[full]>=1.9.3",
    "matplotlib>=3.10.5",
    "ocrmypdf>=16.10.4",
    "ollama>=0.5.3",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.12.0.88",
    "paddleocr[all]>=3.2.0",
    "pillow<11.0.0",
    "pycocotools>=2.0.10",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-doctr[viz]>=1.0.0",
    "qwen-vl-utils>=0.0.11",
    "rembg>=2.0.67",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.3",
    "ultralytics>=8.3.200",
]
